espidf_output_1.txt

Collected 16 compatible libraries
Looking for dependencies...
No dependencies
xtensa-esp32-elf-g++ 

-o .pioenvs\lolin32\src\main.o 
-c -fno-rtti -fno-exceptions -std=gnu++11 
-Wno-error=deprecated-declarations -Wno-unused-parameter -Wno-sign-compare -Os -g3 -nostdlib -Wpointer-arith -Wno-error=unused-but-set-variable -Wno-error=unused-variable
-mlongcalls -ffunction-sections -fdata-sections -fstrict-volatile-bitfields
-DARDUINO=10610 -DARDUINO_ARCH_ESP32 -DESP32 -DESP_PLATFORM -DF_CPU=240000000L -DHAVE_CONFIG_H
-DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DPLATFORMIO=30500 -DESP32_DEV -DARDUINO_LOLIN32
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\config
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32
\tools\sdk\include\bluedroid
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\app_trace
-IC:\Users\bachman0\.platformio\packages\framew
ork-arduinoespressif32\tools\sdk\include\app_update
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\bootloader_support
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\bt
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\driver
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\esp32
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\ethernet
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\fatfs
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\freertos
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\heap
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\jsmn
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\log
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\mdns
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\mbedtls
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\mbedtls_port
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\newlib
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\nvs_flash
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\openssl
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\soc
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\spi_flash
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\sdmmc
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\tcpip_adapter
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\ulp-IC:\Users\bachman0\.platf
ormio\packages\framework-arduinoespressif32\tools\sdk\include\vfs-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\wear_levelling
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\xtensa-debug-module
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\newlib
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\coap
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\wpa_supplicant
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\expat
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\json
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\nghttp
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\tools\sdk\include\lwip
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\cores\esp32
-IC:\Users\bachman0\.platformio\packages\framework-arduinoespressif32\variants\lolin32
-Isrc
src\main.cpp
src\main.cpp:6:1: error: 'pthread_mutex_t' does not name a type
pthread_mutex_t a;
^
*** [.pioenvs\lolin32\src\main.o] Error 1
========================================================================= [ERROR] Took 1.06 seconds =========================================================================
PS C:\Users\bachman0\Documents\PlatformIO\Projects\lolin32-arduino-PA17_bmat_6>
